<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.globalmentor</groupId>
		<artifactId>globalmentor-base</artifactId>
		<version>0.7.3</version>
	</parent>

	<artifactId>globalmentor-rdf-bom</artifactId>
	<version>0.6.4-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>GlobalMentor RDF BOM</name>
	<description>RDF implementation aggregate parent POM and bill of materials.</description>
	<url>http://www.globalmentor.com/software/</url>
	<inceptionYear>1996</inceptionYear>

	<licenses>
		<license>
			<name>Apache-2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:https://bitbucket.org/globalmentor/globalmentor-rdf.git</connection>
		<developerConnection>scm:git:https://bitbucket.org/globalmentor/globalmentor-rdf.git</developerConnection>
		<url>https://bitbucket.org/globalmentor/globalmentor-rdf</url>
	</scm>

	<properties>
		<maven.compiler.release>11</maven.compiler.release>
	</properties>

	<modules>
		<module>rdf</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-web</artifactId>
				<version>0.6.6-SNAPSHOT</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-rdf</artifactId>
				<version>0.6.4-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>com.globalmentor</groupId>
				<artifactId>globalmentor-text-directory-vcard</artifactId>
				<version>0.6.3</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>